--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -26,9 +26,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav" data-bind="foreach: Channels">
 				<li data-bind="css: {active: Selected}" role="presentation">
-					<a data-bind="click: $parent.SelectedChannel" href="#">
-						<span data-bind="text: '#' + ChannelName"></span>
-					</a>
+					<a class="autoClose" data-bind="click: $parent.SelectedChannel, text: '#' + ChannelName" href="#"></a>
 				</li>
 			</ul>
 
@@ -37,14 +35,14 @@
 					<a aria-expanded="false" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button">Tools <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
-							<a data-bind="click:showJoinChannelModal" href="#">Join Channel</a>
+							<a class="autoClose" data-bind="click:showJoinChannelModal" href="#">Join Channel</a>
 						</li>
 						<li>
-							<a data-bind="click:showUsers" href="#">Users</a>
+							<a class="autoClose" data-bind="click:showUsers" href="#">Users</a>
 						</li>
 						<li class="divider"></li>
 						<li>
-							<a data-bind="click:leaveChannel" href="#" class="warning">Leave Channel</a>
+							<a class="autoClose" data-bind="click:leaveChannel" href="#">Leave Channel</a>
 						</li>
 					</ul>
 				</li>
