--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -84,29 +84,29 @@
 			<div class="modal-header">
 				<h4 class="modal-title">Login to SharpMod</h4>
 			</div>
-			<form data-bind="submit:login">
+			<form data-bind="submit: login">
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="form-group">
 								<label for="username">Username</label>
-								<input class="form-control" data-bind="value:Username" id="username" name="username" required type="text" />
+								<input class="form-control" data-bind="value: Username" id="username" name="username" required type="text" />
 							</div>
 
 							<div class="form-group">
 								<label for="password">Password</label>
-								<input class="form-control" data-bind="value:Password" id="password" name="password" required type="password" />
+								<input class="form-control" data-bind="value: Password" id="password" name="password" required type="password" />
 							</div>
 
 							<div class="form-group">
 								<label for="channel">Channel</label>
-								<select class="select2" data-bind="value:LoginSelectedChannel" id="channel" name="channel"></select>
+								<select class="select2" data-bind="value: LoginSelectedChannel" id="channel"></select>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-info pull-left" data-bind="click:showTokenAuthModal" type="button">Get auth token</button>
+					<button class="btn btn-info pull-left" data-bind="click: showTokenAuthModal" type="button">Get auth token</button>
 					<button class="btn btn-success" type="submit">Login</button>
 				</div>
 			</form>
@@ -154,7 +154,7 @@
 						<div class="col-md-12">
 							<div class="form-group">
 								<label for="newChannel">Channel</label>
-								<select class="select2" data-bind="value:LoginSelectedChannel" id="newChannel"></select>
+								<select class="select2" data-bind="value: LoginSelectedChannel" id="newChannel"></select>
 							</div>
 						</div>
 					</div>
