--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -38,6 +38,9 @@
 						<li>
 							<a class="autoClose" data-bind="click: showJoinChannelModal" href="#">Join Channel</a>
 						</li>
+						<li>
+							<a class="autoClose" data-bind="click: showKeywordModal" href="#">Manage Keywords</a>
+						</li>
 						<li class="divider" data-bind="visible: ChannelIsSelected" role="presentation"></li>
 						<li class="dropdown-header" data-bind="visible: ChannelIsSelected" role="presentation">
 							Channel Tools
@@ -217,6 +220,42 @@
 						<a data-bind="click: function(){timeout(3600);}">60 minutes</a>
 					</li>
 				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="keywordModal" role="dialog">
+	<div class="modal-dialog modal-sm">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button aria-label="Close" class="close" data-dismiss="modal" type="button">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title">Keywords</h4>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-md-12">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Keyword</th>
+								</tr>
+							</thead>
+							<tbody data-bind="foreach: Keywords">
+								<tr>
+									<td>
+										<span data-bind="text: $data"></span>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
 			</div>
 		</div>
 	</div>
