--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<!--<link href="https://netdna.bootstrapcdn.com/bootswatch/latest/cerulean/bootstrap.min.css" rel="stylesheet" type="text/css" />-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/css/select2.min.css" rel="stylesheet" />
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
@@ -186,7 +187,7 @@
 						<span data-bind="text: Timestamp"></span>
 						<span data-bind="html: Badges"></span>
 						<strong data-bind="text: Name, style: {color: Color}"></strong>
-						<span data-bind="html: Message, visible: !Timeout(), style: {color: MessageColor}"></span>
+						<span data-bind="html: Message, style: {color: MessageColor}"></span>
 					</div>
 				</div>
 			</div>
