--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -5,9 +5,7 @@
 	<meta charset="utf-8" />
 	<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/css/select2.min.css" rel="stylesheet" />
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
-	<link href="css/theme.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 	<link href="/assets/icon.png" rel="icon" type="image/png">
 </head>
@@ -107,7 +105,7 @@
 
 							<div class="form-group">
 								<label for="channel">Channel</label>
-								<select class="select2" data-bind="value: LoginSelectedChannel" id="channel"></select>
+								<input class="form-control" data-bind="value: LoginSelectedChannel" id="channel" name="channel" required type="text" />
 							</div>
 						</div>
 					</div>
@@ -269,7 +267,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/js/select2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
