--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -7,8 +7,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
-	<link href="css/theme.css" rel="stylesheet" type="text/css" />
-	<link href="/assets/icon.png" rel="icon" type="image/png">
+	<link href="assets/icon.png" rel="icon" type="image/png">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
