--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/jquery-mentions-input.css" rel="stylesheet" type="text/css" />
+    <link href="css/jquery.mentionsInput.css" rel="stylesheet" type="text/css" />
     <link href="css/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/icon.png" rel="icon" type="image/png">
 </head>
@@ -272,7 +272,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
-<script src="javascript/jquery-mentions-input.js" type="text/javascript"></script>
+<script src="javascript/jquery.mentionsInput.js" type="text/javascript"></script>
 <script src="javascript/index.js" type="text/javascript"></script>
 </body>
 </html>
