--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/jquery.mentionsInput.css" rel="stylesheet" type="text/css" />
+    <link href="css/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
     <link href="css/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/icon.png" rel="icon" type="image/png">
 </head>
@@ -78,9 +78,9 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-        <div>
-            <textarea class="form-control" data-bind="value: OutgoingMessage, enable: ChannelIsSelected" id="chatMessage" placeholder="Send a message" style="height: 38px !important" type="text"></textarea>
-        </div>
+        <form data-bind="submit: sendMessage">
+            <input class="form-control" data-bind="value: OutgoingMessage, enable: ChannelIsSelected" id="chatMessage" placeholder="Send a message" type="text" />
+        </form>
     </div>
 </nav>
 
@@ -272,7 +272,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
-<script src="javascript/jquery.mentionsInput.js" type="text/javascript"></script>
+<script src="javascript/jquery.caret.min.js" type="text/javascript"></script>
+<script src="javascript/jquery.atwho.min.js" type="text/javascript"></script>
 <script src="javascript/index.js" type="text/javascript"></script>
 </body>
 </html>
