--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -4,11 +4,11 @@
     <title>OpenMod</title>
     <meta charset="utf-8" />
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/site.css" rel="stylesheet" type="text/css" />
-    <link href="assets/icon.png" rel="icon" type="image/png">
+    <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/lib/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/lib/jquery.atwho/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/site.css" rel="stylesheet" type="text/css" />
+    <link href="assets/images/icon.png" rel="icon" type="image/png">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -266,14 +266,14 @@
     </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
-<script src="javascript/jquery.caret.min.js" type="text/javascript"></script>
-<script src="javascript/jquery.atwho.min.js" type="text/javascript"></script>
-<script src="javascript/index.js" type="text/javascript"></script>
+<script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
+<script src="assets/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/lib/select2/js/select2.min.js"></script>
+<script src="assets/lib/socket.io/socket.io.min.js" type="text/javascript"></script>
+<script src="assets/lib/underscore/underscore-min.js" type="text/javascript"></script>
+<script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
+<script src="assets/lib/jquery.caret/jquery.caret.min.js" type="text/javascript"></script>
+<script src="assets/lib/jquery.atwho/jquery.atwho.min.js" type="text/javascript"></script>
+<script src="assets/index.js" type="text/javascript"></script>
 </body>
 </html>
