--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -21,13 +21,13 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: '#' + SelectedChannel().ChannelName, visible: SelectedChannel().ChannelName" href="#"></a>
+            <a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: Brand, visible: ChannelIsSelected" href="#"></a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" data-bind="foreach: Channels">
                 <li data-bind="css: {active: Selected}" role="presentation">
-                    <a class="autoClose channelClose" data-bind="click: $parent.SelectedChannel, text: '#' + ChannelName" href="#"></a>
+                    <a class="autoClose channelClose" data-bind="click: $parent.SelectedChannel, text: ChannelHashName" href="#"></a>
                 </li>
             </ul>
 
