--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -66,12 +66,11 @@
         <div class="tab-content" data-bind="foreach: Channels">
             <div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
                 <div data-bind="foreach: Comments">
-                    <div class="singleComment well well-sm" data-bind="click: showComment, css: {'bg-danger': Highlight}">
+                    <div class="singleComment well well-sm" data-bind="click: showComment, css: HighlightColor">
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
-                        <span data-bind="html: Message, visible: !Hidden(), style: {color: MessageColor}"></span>
-                        <span data-bind="visible: Hidden">message deleted. click to view.</span>
+                        <span data-bind="html: ChatMessage, style: {color: ChatColor}"></span>
                     </div>
                 </div>
             </div>
@@ -193,7 +192,7 @@
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
-                        <span data-bind="html: Message, style: {color: MessageColor}"></span>
+                        <span data-bind="html: Message, style: {color: DetailColor}"></span>
                     </div>
                 </div>
             </div>
