--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
     <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/lib/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/lib/jquery.atwho/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/icon.png" rel="icon" type="image/png">
@@ -21,7 +20,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: '#' + Channel()" href="#"></a>
+            <a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: Brand" href="#"></a>
         </div>
 
         <div class="collapse navbar-collapse">
@@ -55,12 +54,11 @@
             </div>
             <div class="tab-pane" id="chat">
                 <div data-bind="foreach: Comments">
-                    <div class="singleComment well well-sm" data-bind="click: showComment, css: {'bg-danger': Highlight}">
+                    <div class="singleComment well well-sm" data-bind="click: showComment, css: HighlightColor">
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
-                        <span data-bind="html: Message, visible: !Hidden(), style: {color: MessageColor}"></span>
-                        <span data-bind="visible: Hidden">message deleted. click to view.</span>
+                        <span data-bind="html: ChatMessage, style: {color: ChatColor}"></span>
                     </div>
                 </div>
             </div>
@@ -149,7 +147,7 @@
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
-                        <span data-bind="html: Message, style: {color: MessageColor}"></span>
+                        <span data-bind="html: Message, style: {color: DetailColor}"></span>
                     </div>
                 </div>
             </div>
@@ -203,18 +201,76 @@
                                 <label for="newKeyword">Add New Keyword</label>
                                 <input class="form-control" data-bind="value: NewKeyword" id="newKeyword" required type="text" />
                             </div>
+                            <button style="display: none" type="submit"></button>
                         </form>
                     </div>
+
+                    <hr />
+
                     <div class="col-md-12">
                         <label>Existing Keywords</label>
                         <table class="table">
                             <tbody data-bind="foreach: Keywords">
                                 <tr>
                                     <td>
-                                        <span data-bind="text: $data"></span>
+                                        <span data-bind="text: value"></span>
                                     </td>
                                     <td>
-                                        <a data-bind="click: function(){$parent.removeKeyword($data);}">Remove</a>
+                                        <a class="btn btn-danger" data-bind="click: function(){$parent.removeKeyword(value);}">Remove</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="personalCommandModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Personal Commands</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <form data-bind="submit: addPersonalCommand">
+                            <div class="form-group">
+                                <label for="newPersonalCommand">Command</label>
+                                <input class="form-control" data-bind="value: NewPersonalCommand" id="newPersonalCommand" required type="text" />
+                            </div>
+                            <div class="form-group">
+                                <label for="newPersonalCommandText">Text</label>
+                                <input class="form-control" data-bind="value: NewPersonalCommandText" id="newPersonalCommandText" required type="text" />
+                            </div>
+                            <button style="display: none" type="submit"></button>
+                        </form>
+                    </div>
+
+                    <hr />
+
+                    <div class="col-md-12">
+                        <label>Existing Commands</label>
+                        <table class="table">
+                            <tbody data-bind="foreach: PersonalCommands">
+                                <tr>
+                                    <td>
+                                        <span data-bind="text: id"></span>
+                                    </td>
+                                    <td>
+                                        <span data-bind="text: value"></span>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-danger" data-bind="click: function(){$parent.removePersonalCommand(id);}">Remove</a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -231,7 +287,6 @@
 
 <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="assets/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/lib/select2/js/select2.min.js"></script>
 <script src="assets/lib/socket.io/socket.io.min.js" type="text/javascript"></script>
 <script src="assets/lib/underscore/underscore-min.js" type="text/javascript"></script>
 <script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
